--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <li><a href="">Contacts</a></li>
         </ul>
       </nav>
-      <address>
+      <address id="Contacts">
         <a href="mailto:info@devstudio.com">info@devstudio.com</a>
         <a href="tel:+110001111111">+11 (000) 111-11-11</a>
       </address>
@@ -65,22 +65,42 @@
         <h2>Our Team</h2>
         <ul>
           <li>
-            <img src="./images/img1.jpg" alt="Mark Guerrero" />
+            <img
+              src="./images/img1.jpg"
+              alt="Mark Guerrero"
+              width="264"
+              height="260"
+            />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="images/img2.jpg" alt="Tom Ford" />
+            <img
+              src="images/img2.jpg"
+              alt="Tom Ford"
+              width="264"
+              height="260"
+            />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img src="./images/img3.jpg" alt="Camila Garcia" />
+            <img
+              src="./images/img3.jpg"
+              alt="Camila Garcia"
+              width="264"
+              height="260"
+            />
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="./images/img4.jpg" alt="Daniel Wilson" />
+            <img
+              src="./images/img4.jpg"
+              alt="Daniel Wilson"
+              width="264"
+              height="260"
+            />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
@@ -89,9 +109,10 @@
     </main>
 
     <footer>
+      <a href="">WebStudio</a>
       <p>
-        Web Studio Increase the flow of customers and sales for your business
-        with digital marketing & growth solutions.
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
       </p>
     </footer>
   </body>
