--- a/index.html
+++ b/index.html
@@ -16,18 +16,22 @@
         </ul>
       </nav>
       <address id="Contacts">
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+        <ul>
+          <li> <a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li> <a href="tel:+110001111111">+11 (000) 111-11-11</a></ul></li>
       </address>
     </header>
 
     <main>
       <!-- hero image-->
+       <section id="heroimage">
       <h1>Effective Solutions for Your Business</h1>
       <button type="button">Order Service</button>
+      </section>
 
-      <!-- Studio -->
-      <section id="Studio">
+      <!-- opportunities -->
+      <section id="opportunities">
+        <h2>opportunities</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
@@ -109,7 +113,7 @@
     </main>
 
     <footer>
-      <a href="">WebStudio</a>
+      <a href="./index.html">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
