--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           </li>
           <li>
             <img
-              src="images/img2.jpg"
+              src="./images/img2.jpg"
               alt="Tom Ford"
               width="264"
               height="260"
