--- a/index.html
+++ b/index.html
@@ -17,16 +17,17 @@
       </nav>
       <address id="Contacts">
         <ul>
-          <li> <a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li> <a href="tel:+110001111111">+11 (000) 111-11-11</a></ul></li>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        </ul>
       </address>
     </header>
 
     <main>
       <!-- hero image-->
-       <section id="heroimage">
-      <h1>Effective Solutions for Your Business</h1>
-      <button type="button">Order Service</button>
+      <section id="heroimage">
+        <h1>Effective Solutions for Your Business</h1>
+        <button type="button">Order Service</button>
       </section>
 
       <!-- opportunities -->
